--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>CSE 190: Jalen Heyward</title>
+    </head>
+    <body>
+        <h1>Jalen Heyward</h1>
+        <p>This is my web page for CSE 190</p>
+    </body>
+</html>
