--- a/index.html
+++ b/index.html
@@ -2,9 +2,37 @@
 <html>
     <head>
         <title>CSE 190: Jalen Heyward</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>Jalen Heyward</h1>
         <p>This is my web page for CSE 190</p>
     </body>
+    <section class="about">
+    <h2>About Me</h2>
+    <p>Hello! My name is Jalen. I am passionate about technology, design, and learning new skills every day.</p>
+  </section>
+
+  <section class="skills">
+    <h2>Skills</h2>
+  </section>
+
+  <section class="projects">
+    <h2>Projects</h2>
+    <p>This is the project section</p>
+  </section>
+
+  <section class="contact">
+    <h2>Contact me</h2>
+    <p>Email: jlh50@email.sc.edu</p>
+  </section>
+    
+    <div class = "projects">
+
+        <section class="project">
+        <a href="files/statement.pdf"><h3>Problem Statement</h3></a>
+        <a href="files/statement.pdf"><img src="images/problem.png"></a>
+        <p>The app Transloc has A horrible user interface and the tracking is bad</p>
+        </section>
+    </div>
 </html>
