--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
   <section class="projects">
     <h2>Projects</h2>
     <p>This is the project section</p>
+    <p>Affinity Diagram:
+    <a> <img src="images/Affinity Diagram.png"></a>
   </section>
 
   <section class="contact">
