--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h2>Projects</h2>
     <p>This is the project section</p>
     <p>Affinity Diagram:
-    <a> <img src="images/Affinity Diagram.png"></a>
+    <a img src="images/Affinity Diagram.png"></a>
   </section>
 
   <section class="contact">
