--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
   <section class="projects">
     <h2>Projects</h2>
     <p>This is the project section</p>
-    <p>Affinity Diagram:
-    <a href="files/Affinity Diagram.pdf"><img src="images/Affinity Diagram.png"></a>
+    <p>Affinity Diagram:</p>
+    <div class="project-images">
+      <img src="images/AffinityDiagram1.jpg" alt="Affinity Diagram 1">
+      <img src="images/AffinityDiagram2.jpg" alt="Affinity Diagram 2">
+    </div>
   </section>
 
   <section class="contact">
