--- a/index.html
+++ b/index.html
@@ -15,12 +15,18 @@
 
   <section class="skills">
     <h2>Skills</h2>
+    <p>If you'd like to see my full experience and background, view or download my resume:</p>
+    <a class="resume-link" href="files/Jalens-Resume.pdf" target="_blank" rel="noopener noreferrer" download="Jalens-Resume.pdf">View / Download my resume (PDF)</a>
   </section>
 
   <section class="projects">
     <h2>Projects</h2>
     <p>This is the project section</p>
     <p>Affinity Diagram:</p>
+    <h4>My Problem Statement:</h4>
+    <p>The app Transloc has A horrible user interface and the tracking is bad.</p>
+    <a href="files/statement.pdf"><h3>Problem Statement</h3></a>
+    <a href="files/statement.pdf"><img src="images/problem.png"></a>
     <div class="project-images">
       <img src="images/AffinityDiagram1.jpg" alt="Affinity Diagram 1">
       <img src="images/AffinityDiagram2.jpg" alt="Affinity Diagram 2">
@@ -32,12 +38,4 @@
     <p>Email: jlh50@email.sc.edu</p>
   </section>
     
-    <div class = "projects">
-
-        <section class="project">
-        <a href="files/statement.pdf"><h3>Problem Statement</h3></a>
-        <a href="files/statement.pdf"><img src="images/problem.png"></a>
-        <p>The app Transloc has A horrible user interface and the tracking is bad</p>
-        </section>
-    </div>
 </html>
