--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <h4>My Problem Statement:</h4>
     <p>The app Transloc has A horrible user interface and the tracking is bad.</p>
     <a href="files/statement.pdf"><h3>Problem Statement</h3></a>
-    <a href="files/statement.pdf"><img src="images/problem.png"></a>
+    <img src="images/problem statement.jpg" alt="Problem statement">
     <div class="project-images">
       <img src="images/AffinityDiagram1.jpg" alt="Affinity Diagram 1">
       <img src="images/AffinityDiagram2.jpg" alt="Affinity Diagram 2">
