--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <p>Affinity Diagram:</p>
     <h4>My Problem Statement:</h4>
     <p>The app Transloc has A horrible user interface and the tracking is bad.</p>
-    <a href="files/statement.pdf"><h3>Problem Statement</h3></a>
+    <a href="files/problem statement.pdf"><h3>Problem Statement</h3></a>
     <img src="images/problem statement.jpg" alt="Problem statement">
     <div class="project-images">
       <img src="images/AffinityDiagram1.jpg" alt="Affinity Diagram 1">
