--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Jalen Heyward</h1>
-        <p>This is my web page for CSE 190</p>
-    </body>
+      <h1>Jalen Heyward</h1>
+      <p>This is my web page for CSE 190</p>
     <section class="about">
     <h2>About Me</h2>
     <p>Hello! My name is Jalen. I am passionate about technology, design, and learning new skills every day.</p>
@@ -25,8 +24,14 @@
     <p>Affinity Diagram:</p>
     <h4>My Problem Statement:</h4>
     <p>The app Transloc has A horrible user interface and the tracking is bad.</p>
-    <a href="files/problem statement.pdf"><h3>Problem Statement</h3></a>
+    <a href="files/problem%20statement.pdf"><h3>Problem Statement</h3></a>
     <img src="images/problem statement.jpg" alt="Problem statement">
+    <div class="project-pdf">
+      <object data="files/problem%20statement.pdf" type="application/pdf" width="100%" height="500" aria-label="Problem Statement PDF">
+        <p>Your browser does not support PDFs. You can <a href="files/problem%20statement.pdf">download the problem statement (PDF)</a> instead.</p>
+      </object>
+      <p><a href="files/problem%20statement.pdf" download>Download the Problem Statement (PDF)</a></p>
+    </div>
     <div class="project-images">
       <img src="images/AffinityDiagram1.jpg" alt="Affinity Diagram 1">
       <img src="images/AffinityDiagram2.jpg" alt="Affinity Diagram 2">
@@ -38,4 +43,7 @@
     <p>Email: jlh50@email.sc.edu</p>
   </section>
     
+  </section>
+  <!-- Close the body after all sections -->
+  </body>
 </html>
