--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <h2>Skills</h2>
     <p>If you'd like to see my full experience and background, view or download my resume:</p>
     <a class="resume-link" href="files/Jalens-Resume.pdf" target="_blank" rel="noopener noreferrer" download="Jalens-Resume.pdf">View / Download my resume (PDF)</a>
+    <a class="resume-link" href="Resume.html" target="_blank" rel="noopener noreferrer" title="View my resume as an HTML page">View my resume (web)</a>
   </section>
 
   <section class="projects">
