--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h2>Skills</h2>
     <p>If you'd like to see my full experience and background, view or download my resume:</p>
     <a class="resume-link" href="files/Jalens-Resume.pdf" target="_blank" rel="noopener noreferrer" download="Jalens-Resume.pdf">View / Download my resume (PDF)</a>
-    <a class="resume-link" href="Resume.html" target="_blank" rel="noopener noreferrer" title="View my resume as an HTML page">View my resume (web)</a>
+    <a class="resume-link" href="Resume.html" target="_blank" rel="noopener noreferrer" title="View my resume as an HTML page">View my resume (HTML)</a>
   </section>
 
   <section class="projects">
@@ -26,7 +26,9 @@
     <h4>My Problem Statement:</h4>
     <p>The app Transloc has A horrible user interface and the tracking is bad.</p>
     <a href="files/problem%20statement.pdf"><h3>Problem Statement</h3></a>
+    <div class="project-images">
     <img src="images/problem statement.jpg" alt="Problem statement">
+    </div>
     <div class="project-pdf">
       <object data="files/problem%20statement.pdf" type="application/pdf" width="100%" height="500" aria-label="Problem Statement PDF">
         <p>Your browser does not support PDFs. You can <a href="files/problem%20statement.pdf">download the problem statement (PDF)</a> instead.</p>
@@ -37,6 +39,9 @@
       <img src="images/AffinityDiagram1.jpg" alt="Affinity Diagram 1">
       <img src="images/AffinityDiagram2.jpg" alt="Affinity Diagram 2">
     </div>
+    <p>some of my repositories!</p>
+    <a class="resume-link" href="https://github.com/heyjal0023/Java-Project" target="_blank" rel="noopener noreferrer" >View my Java Project repository</a>
+    <a class="resume-link" href="https://github.com/heyjal0023/Other-Java-project" target="_blank" rel="noopener noreferrer" >View my otherJava Project repository</a>
   </section>
 
   <section class="contact">
