--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <h4>My Problem Statement:</h4>
     <p>The app Transloc has A horrible user interface and the tracking is bad.</p>
     <a href="files/problem%20statement.pdf"><h3>Problem Statement</h3></a>
-    <div class="project-images">
+    <div class="problem-images">
     <img src="images/problem statement.jpg" alt="Problem statement">
     </div>
     <div class="project-pdf">
