--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <img src="images/AffinityDiagram1.jpg" alt="Affinity Diagram 1">
       <img src="images/AffinityDiagram2.jpg" alt="Affinity Diagram 2">
     </div>
-    <p>some of my repositories!</p>
+    <h3>some of my repositories!</h3>
     <a class="resume-link" href="https://github.com/heyjal0023/Java-Project" target="_blank" rel="noopener noreferrer" >View my Java Project repository</a>
     <a class="resume-link" href="https://github.com/heyjal0023/Other-Java-project" target="_blank" rel="noopener noreferrer" >View my otherJava Project repository</a>
   </section>
