--- a/index.html
+++ b/index.html
@@ -40,7 +40,17 @@
       <img src="images/AffinityDiagram2.jpg" alt="Affinity Diagram 2">
     </div>
     <h3>some of my repositories!</h3>
+    <div class="project-images">
+      <a href="https://github.com/heyjal0023/Java-Project" target="_blank" rel="noopener noreferrer">
+        <img src="images/Java.png" alt="Java Project">
+      </a>
+    </div>
     <a class="resume-link" href="https://github.com/heyjal0023/Java-Project" target="_blank" rel="noopener noreferrer" >View my Java Project repository</a>
+    <div class="project-images">
+      <a href="https://github.com/heyjal0023/Other-Java-project" target="_blank" rel="noopener noreferrer" title="Other Java Project Repository">
+        <img src="images/Java.png" alt="Other Java Project">
+      </a>
+    </div>
     <a class="resume-link" href="https://github.com/heyjal0023/Other-Java-project" target="_blank" rel="noopener noreferrer" >View my otherJava Project repository</a>
   </section>
 
