--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     <h2>Projects</h2>
     <p>This is the project section</p>
     <p>Affinity Diagram:</p>
+    <!-- Clickable Affinity Diagram image under the 'Affinity Diagram' heading -->
+    <a href="images/AffinityDiagram1.jpg" target="_blank" rel="noopener noreferrer">
+      <img src="images/AffinityDiagram1.jpg" alt="Affinity Diagram" style="max-width:100%; height:auto; display:block; margin:10px 0;">
+    </a>
     <h4>My Problem Statement:</h4>
     <p>The app Transloc has A horrible user interface and the tracking is bad.</p>
     <a href="files/problem%20statement.pdf"><h3>Problem Statement</h3></a>
@@ -38,6 +42,10 @@
     <div class="project-images">
       <img src="images/AffinityDiagram1.jpg" alt="Affinity Diagram 1">
       <img src="images/AffinityDiagram2.jpg" alt="Affinity Diagram 2">
+      <!-- Storyboard image added under AffinityDiagram2.jpg -->
+      <a href="images/Storyboard3.jpg" target="_blank" rel="noopener noreferrer">
+        <img src="images/Storyboard3.jpg" alt="Storyboard 3: Notify bus" style="max-width:100%; height:auto; display:block; margin:10px 0;">
+      </a>
     </div>
     <h3>some of my repositories!</h3>
     <div class="project-images">
