--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <p>This is the project section</p>
     <p>Affinity Diagram:</p>
     <!-- Clickable Affinity Diagram image under the 'Affinity Diagram' heading -->
-    <a href="images/AffinityDiagram1.jpg" target="_blank" rel="noopener noreferrer">
-      <img src="images/AffinityDiagram1.jpg" alt="Affinity Diagram" style="max-width:100%; height:auto; display:block; margin:10px 0;">
+    <a href="images/realAffinty Diagram.png" target="_blank" rel="noopener noreferrer">
+      <img src="images/realAffinty Diagram.png" alt="Affinity Diagram" >
     </a>
     <h4>My Problem Statement:</h4>
     <p>The app Transloc has A horrible user interface and the tracking is bad.</p>
@@ -42,6 +42,7 @@
     <div class="project-images">
       <img src="images/AffinityDiagram1.jpg" alt="Affinity Diagram 1">
       <img src="images/AffinityDiagram2.jpg" alt="Affinity Diagram 2">
+      <img src="images/Storyboard3.jpg" alt="Storyboard 3: Notify bus">
       <!-- Storyboard image added under AffinityDiagram2.jpg -->
       <a href="images/Storyboard3.jpg" target="_blank" rel="noopener noreferrer">
         <img src="images/Storyboard3.jpg" alt="Storyboard 3: Notify bus" style="max-width:100%; height:auto; display:block; margin:10px 0;">
