--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
     <h2>Projects</h2>
     <p>This is the project section</p>
     <p>Affinity Diagram:</p>
-    <!-- Clickable Affinity Diagram image under the 'Affinity Diagram' heading -->
+     <div class="project-images">
     <a href="images/realAffinty Diagram.png" target="_blank" rel="noopener noreferrer">
       <img src="images/realAffinty Diagram.png" alt="Affinity Diagram" >
+      </div>
     </a>
     <h4>My Problem Statement:</h4>
     <p>The app Transloc has A horrible user interface and the tracking is bad.</p>
@@ -43,9 +44,7 @@
       <img src="images/AffinityDiagram1.jpg" alt="Affinity Diagram 1">
       <img src="images/AffinityDiagram2.jpg" alt="Affinity Diagram 2">
       <img src="images/Storyboard3.jpg" alt="Storyboard 3: Notify bus">
-      <!-- Storyboard image added under AffinityDiagram2.jpg -->
-      <a href="images/Storyboard3.jpg" target="_blank" rel="noopener noreferrer">
-        <img src="images/Storyboard3.jpg" alt="Storyboard 3: Notify bus" style="max-width:100%; height:auto; display:block; margin:10px 0;">
+      <img src="images/Storyboard3.jpg" alt="Storyboard 3: Notify bus" style="max-width:100%; height:auto; display:block; margin:10px 0;">
       </a>
     </div>
     <h3>some of my repositories!</h3>
