--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="project-images">
       <img src="images/AffinityDiagram1.jpg" alt="Affinity Diagram 1">
       <img src="images/AffinityDiagram2.jpg" alt="Affinity Diagram 2">
-      <img src="images/Storyboard3.jpg" alt="Storyboard 3: Notify bus">
+      <img src="images/affinity diagram 3.jpg" alt="Storyboard 3: Notify bus">
     </div>
     <h3>some of my repositories!</h3>
     <div class="project-images">
