--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
     <p>The app Transloc has A horrible user interface and the tracking is bad.</p>
     <a href="files/problem%20statement.pdf"><h3>Problem Statement</h3></a>
     <div class="problem-images">
-    <img src="images/problem statement.jpg" alt="Problem statement">
+      <a href="files/problem%20statement.pdf" target="_blank" rel="noopener noreferrer">
+        <img src="images/problem statement.jpg" alt="Problem statement">
+      </a>
     </div>
     <div class="project-pdf">
       <object data="files/problem%20statement.pdf" type="application/pdf" width="100%" height="500" aria-label="Problem Statement PDF">
