--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
   <section class="projects">
     <h2>Projects</h2>
     <p>This is the project section</p>
-    <p>Affinity Diagram:</p>
+    <h3><a href="files/Kami%20Export%20-%20Affinty%20Diagram.pdf" target="_blank" rel="noopener noreferrer">Affinity Diagram:</a></h3>
+    <p> An affinity diagram is a tool used to organize ideas and data into groups based on their natural relationships. It helps to visualize and categorize information, making it easier to identify patterns and themes.</p>
      <div class="project-images">
-    <a href="images/realAffinty Diagram.png" target="_blank" rel="noopener noreferrer">
+    <a href="files/Kami%20Export%20-%20Affinty%20Diagram.pdf" target="_blank" rel="noopener noreferrer">
       <img src="images/realAffinty Diagram.png" alt="Affinity Diagram" >
       </div>
     </a>
@@ -43,9 +44,15 @@
       <p><a href="files/problem%20statement.pdf" download>Download the Problem Statement (PDF)</a></p>
     </div>
     <div class="project-images">
-      <img src="images/AffinityDiagram1.jpg" alt="Affinity Diagram 1">
-      <img src="images/AffinityDiagram2.jpg" alt="Affinity Diagram 2">
-      <img src="images/affinity diagram 3.jpg" alt="Storyboard 3: Notify bus">
+      <a href="files/Kami%20Export%20-%20Affinty%20Diagram.pdf" target="_blank" rel="noopener noreferrer">
+        <img src="images/AffinityDiagram1.jpg" alt="Affinity Diagram 1">
+      </a>
+      <a href="files/Kami%20Export%20-%20Affinty%20Diagram.pdf" target="_blank" rel="noopener noreferrer">
+        <img src="images/AffinityDiagram2.jpg" alt="Affinity Diagram 2">
+      </a>
+      <a href="files/Kami%20Export%20-%20Affinty%20Diagram.pdf" target="_blank" rel="noopener noreferrer">
+        <img src="images/affinity diagram 3.jpg" alt="Storyboard 3: Notify bus">
+      </a>
     </div>
     <h3>some of my repositories!</h3>
     <div class="project-images">
